<resources>
    <string name="app_name">ecoWateringHub</string>
    <string name="add_new_remote_device">Add remote device</string>
    <string name="add_remote_device_button">Add remote device</string>
    <string name="address_not_found">Address not found\nIf you have already given location permission and set them on "always", try to restart the device.</string>
    <string name="authorized_devices_textview">Authorized devices</string>
    <string name="bt_connection_title">Select your ecoWatering Device</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting…</string>
    <string name="connection_chooser_fragment_title">Choose the way you like to authorize a remote ecoWatering Device.</string>
    <string name="delete_account_button">Delete account</string>
    <string name="detach_sensor_dialog_title">Are you sure to detach this sensor?</string>
    <string name="discovery_remote_device_title">Choose your remote device</string>
    <string name="first_start_message_text_view">The name you choose, will be used to recognize your hub.</string>
    <string name="first_start_title_text_view">Choose your ecoWatering Hub name</string>
    <string name="http_error_message">Sorry, something went wrong, please try again.</string>
    <string name="http_error_title">HTTP error</string>
    <string name="hub_name_confirm_dialog_message">You won\'t be able to change it</string>
    <string name="hub_name_confirm_dialog_title">Are you sure?</string>
    <string name="insert_hub_name_hint">Insert hub name</string>
    <string name="irrigation_system_founded_case">If you want to use this irrigation system go to Next.\n\nIf you cannot see your irrigation system, please make you sure irrigation system is correctly connected and retry.</string>
    <string name="irrigation_system_not_founded_case">No irrigation system founded.\n\nIf you cannot see your irrigation system, please make you sure irrigation system is correctly connected and retry.</string>
    <string name="name_label">Name</string>
    <string name="no_sensor_selected_label">No sensor selected</string>
    <string name="remote_device_added_message">Now you can use that remote device to control your ecoWatering system.</string>
    <string name="remote_device_added_title">Remote device Added</string>
    <string name="remote_device_already_exists_message">Try with another device.</string>
    <string name="remote_device_already_exists_title">Remote device already connected</string>
    <string name="remote_device_not_available_message">Please restart the authorization process on the remote device.</string>
    <string name="remote_device_not_available_title">Sorry, this device is not available</string>
    <string name="remove_remote_device_button">Remove remote device</string>
    <string name="remove_remote_device_title">Select the ecoWatering Device that you want to remove</string>
    <string name="remove_remote_device_title_empty_case">No remote device connected</string>
    <string name="restart_discovery_button">Restart discovery</string>
    <string name="selected_sensor_label">Selected sensor: </string>
    <string name="sensor_detached_title">Sensor successfully detached</string>
    <string name="sensors_configuration_not_complete">Sensors configuration not complete</string>
    <string name="sensors_configuration_complete">Sensors configuration complete</string>
    <string name="sensors_notification_title">Sensors Update</string>
    <string name="sensors_notification_text">Last update: </string>
    <string name="sensors_weather_background_refresh">Sensors and Weather background refresh</string>
    <string name="this_url">http://theall.altervista.org/sms2324</string>
    <string name="title_authorization_chooser_fragment">Choose the way you like to authorize a new remote device</string>
    <string name="try_to_connect_title">Wait a moment. We\'re try to connect…</string>
    <string name="unknown">Unknown</string>
    <string name="update_Location_button">Update position</string>
    <string name="user_must_enable_location_permission_title">You have to allow the app, to know your location</string>
    <string name="user_must_enable_location_permission_message">Go to Setting->Privacy->Manage permissions and allow the app to know your location manually.</string>
    <string name="why_grant_location_permission_dialog_title">We need to know your position</string>
    <string name="why_grant_location_permission_dialog_message">Please grant location permission.\nWe will use your location, to allow the app to generate a consistently plane for your system, based on weather.</string>
    <string name="why_grant_location_permission_manually_dialog_message">Please grant location permission manually.\nWe will use your location, to allow the app to generate a consistently plane for your system, based on weather.</string>
    <string name="why_use_bt_dialog_message">We will use your Bluetooth to allow you, to be paired with the ecoWatering Hub only.</string>
    <string name="why_use_location_address_dialog_message">We will use your location, to allow the app to generate a consistently plane for your system, based on weather.</string>
    <string name="why_use_location_address_dialog_post_never_show_message">Go to Setting->privacy->Manage permissions and allow the app to know your location manually.</string>
    <string name="why_use_location_dialog_message">We will use your location, to be sure you are near to the ecoWatering Hub.</string>
    <string name="why_use_location_dialog_title">Please, allow us to know your location</string>
    <string name="wifi_connection_title">Select the ecoWatering Device</string>
</resources>