<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nameWidgetLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/locationWidgetLayout">

        <TextView
            android:id="@+id/firstStartTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_start_title_text_view"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:padding="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/firstStartMessageTextView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/firstStartMessageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_start_message_text_view"
            android:textAlignment="center"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@+id/firstStartTitleTextView"
            app:layout_constraintBottom_toTopOf="@+id/hubNameEditText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/hubNameEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:inputType="text"
            android:hint="@string/insert_hub_name_hint"
            android:textColorHint="@color/classic_hint"
            android:autofillHints=""
            android:padding="10dp"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintTop_toBottomOf="@+id/firstStartMessageTextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/locationWidgetLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/nameWidgetLayout"
        app:layout_constraintBottom_toTopOf="@+id/firstStartFinishButton" >

        <TextView
            android:id="@+id/locationLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_label"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/locationAddressTextView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/locationAddressTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/address_not_found"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintTop_toBottomOf="@+id/locationLabelTextView"
            app:layout_constraintBottom_toTopOf="@+id/updateLocationButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/updateLocationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_Location_button"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/ew_secondary_color"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/locationAddressTextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/firstStartFinishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        android:backgroundTint="@color/ew_primary_color"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/locationWidgetLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>